--- a/css/physical.css
+++ b/css/physical.css
@@ -1,3 +1,37 @@
 .container {
     width: 1140px;
 }
+
+.wrapper {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 40px;
+    margin-bottom: 60px;
+}
+
+
+
+p {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+h2 {
+    border-top: 1px solid #000;
+    padding-bottom: 20px;
+}
+
+#img {
+    width: 25%;
+    height: 100%;
+    vertical-align: middle;
+}
+
+#content {
+    width: 60%;
+}
+
+span {
+    font-style: oblique;
+}
